changes to analytics, bugfixes, instances added

--- a/data/config/config.json
+++ b/data/config/config.json
@@ -1,7 +1,7 @@
 {
     "files_folder_path": "/Users/simonvermeir/Documents/industrial-engineering/SchoolCurrent/MasterProef/Master-Thesis-SSP/data/instances",
-    "files_name": "mecler_files.json",
-    "title": "Mecler1",
+    "files_name": "crama_files.json",
+    "title": "Crama1",
     "params": {
         "root_folder": "",
         "instance": "",
