--- a/data/config/config.json
+++ b/data/config/config.json
@@ -5,7 +5,7 @@
     "params": {
         "root_folder": "",
         "instance": "",
-        "run_type": "BRUTE-F",
+        "run_type": "DEBUG-A",
         "run_time": "700",
         "seed": "7",
         "start_temp": "100",
@@ -69,8 +69,10 @@
         "n_jobs": 0,
         "n_tools": 0,
         "magazine_size": 0,
+        "variations": 0,
         "switches": 0,
         "run_time": 0,
+        "run_type": "",
         "sequence": []
     }
 }
