-Added clean up script for files -Improved logging -Added visualisation rejected/accepted/improved graph -Work started on decode ground truth version -Work started on decode version 1 refactor for benchmarking -Results and Solution structure changed to json for easy future adjustments, and more data sharing -Improved Result processing, possible check variation summary and individual runs. -Improved calcultations archtecture for result processing, streamlined for easy expansion,  integrated standard Result Class for across python codebase, ensuring cohesion. -Runs executed to check faults against reference benchmarks , mainly yanasse A1-4

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'de.siegmar:fastcsv:1.0.3'
     implementation 'com.diogonunes:JCDP:4.0.1'
+    implementation "com.google.guava:guava:29.0-jre"
+
 }
 
 jar {
