Migrated command line args processing to "picocli" framework. Added new paramaters. Defined standerd params to parameter class, added new parameters...
Former-commit-id: 7f2fc2d57488670f28893de2b4c98efb8e609b44

--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ dependencies {
     implementation 'de.siegmar:fastcsv:1.0.3'
     implementation 'com.diogonunes:JCDP:4.0.1'
     implementation "com.google.guava:guava:29.0-jre"
-
+    compile 'info.picocli:picocli:4.3.2'
 }
 
 jar {
