--- a/data/config/config.json
+++ b/data/config/config.json
@@ -5,10 +5,10 @@
     "title": "MIXED",
     "params": {
 
-        "run_type": "A-RR-02",
+        "run_type": "SA-TIE",
         "root_folder": "",
         "instance": "SD",
-        "run_time": "240",
+        "run_time": "420",
         "seed": "7",
 
 
@@ -21,15 +21,20 @@
         "w_dist_max":  1,
 
 
+        "constructive_heuristic": "random",
+        "local_search": "ruinAndRecreate",
+        "meta_heuristic": "simulatedAnnealing",
+        "objective": "switches",
+
+
         "blink_rate": 0.01,
         "avg_ruin": 10,
 
-
-
         "start_temp": "100",
-        "end_temp": "0.000097",
-        "decay_rate": "0.99900",
-        "sa_timed": true,
+        "end_temp": "0.00097",
+        "decay_rate": -1,
+        "sa_timed": false,
+        "force_alpha": true,
         "iterations": -1,
         "alpha": -1,
         "beta": 0,
@@ -61,41 +66,6 @@
         "variation": [
             1,
             30
-        ]
-    },
-
-    "solution": {
-        "n_jobs": 0,
-        "n_tools": 0,
-        "magazine_size": 0,
-        "switches": 0,
-        "tool_hops": 0,
-        "tool_add_distance": 0,
-        "tool_remove_distance": 0,
-        "run_time": 0,
-        "sequence": [],
-        "tool_hops_sequence": [],
-        "tool_add_distance_sequence": [],
-        "tool_remove_distance_sequence": [],
-        "matrix": [
-            []
-        ]
-    },
-    "result": {
-        "n_jobs": 0,
-        "n_tools": 0,
-        "magazine_size": 0,
-        "switches": 0,
-        "tool_hops": 0,
-        "tool_add_distance": 0,
-        "tool_remove_distance": 0,
-        "run_time": 0,
-        "sequence": [],
-        "tool_hops_sequence": [],
-        "tool_add_distance_sequence": [],
-        "tool_remove_distance_sequence": [],
-        "matrix": [
-            []
         ]
     },
     "csv_line": {
