--- a/data/config/config.yaml
+++ b/data/config/config.yaml
@@ -42,8 +42,8 @@ params:
       constructive_heuristic: random    #(ordered, toolSequencing, random)
       local_search: ruinAndRecreate     #(ruinAndRecreate, swaps)
       meta_heuristic: steepestDescentBestRandom #(steepestDescentBestRandom, steepestDescentBestFirst, simulatedAnnealing, hillClimbing, permutations, forceSequence, multiForceSequence)
-      objective: switches              #(switches, tieBreaking, toolDistance, toolHops); the objective function needed to be used
-
+      objective: switches              #(switches, tieBreaking, toolDistance, penalty); the objective function needed to be used
+      run_backup_SD: true             #(bool)
 
       #
       # Ruin and Recreate
@@ -52,7 +52,7 @@ params:
       blink_rate: 0.01                  #(double);
       avg_ruin: 10                      #(int); max allowed ruined solutions
       select: randomTool                #(randomTool, randomJob, mostHops, mostHopsRoulette);
-      match: requiredTool                   #(requiredTool, ktnsTool, notRequiredTool, hopCreator)
+      match: requiredTool                   #(requiredTool, ktnsTool, notRequiredTool, hopCreator, ktnsFail)
       insert: best                       #(best); where to insert the removed jobs
       filter: random                     #(random, worst); when making a choice how many to remove, which ones to keep
       insert_positions: all             #(all, removed); insert at all possible positions, or only in the removed positions
@@ -81,7 +81,7 @@ params:
       w_dist: 1                        #(double); weight total distance
       w_dist_min: 1                    #(double); weight distance minimized distance(tools that are present)
       w_dist_max: 1                    #(double); weight distance maximized distance(tools that are not present)
-
+      w_fail_ktns: 0                   #(double)
 
       #
       # Objective: Tool Hops
@@ -116,6 +116,9 @@ params:
       w_jobs: 1                      #(double;  weight on number of jobs
       w_tools: 1                     #(double); weight on number of tools
       w_mag: 1                       #(double); weight on magazine size
+
+      end_no_change: true            #(bool);
+      end_iterations:
 
 
       #
