-SWITCHED TO DEVELOPMENT VERSION: 3, FIRST COMMIT :) 	-CLEANED UP PREVIOUS GIT HISTORY (done from version: 2) -> removed: log, result and solution files, primarily in instances folder, using bfg tool; resulted in significant reduction in size for repo, made pushing to repo reasonable again; merged previous version 2 into development, and pushed (-f) all branches to remote; created version 3 branch. -gitignore adjusted: ignores instances: log, result and solution, to prevent large files in git. -(commit has changed commit message: added info about repo refactor mentioned)

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 # Compiled class file
 *.class
 venv
+
+#ignore instance results
 data/instances_archive
+data/instances/catanzaro
+data/instances/crama
+data/instances/mecler
+data/instances/yanasse
+
+
 .gradle
