--- a/data/config/experiments/config_sa_tuning.yaml
+++ b/data/config/experiments/config_sa_tuning.yaml
@@ -1,14 +1,14 @@
 ---
 root_path: "/Users/simonvermeir/Documents/industrial-engineering/SchoolCurrent/MasterProef/Master-Thesis-SSP"
 files: 'mixed_files.json' #filename of file containing instances to be run
-runs: 5  #int; amount of runs of each instance
+runs: 3  #int; amount of runs of each instance
 parallel: true      #(bool); run instances parallel
 background: False    #(bool); run everything as a background task; only applicable when running parallel
 multi: True         #(bool); run multiple params versions
 use_runs: True      #(bool); run each instance multiple times
-jobs: 4             #(int); how many jobs need to be run in parrallel; only applicable when running parallel
+jobs: 32             #(int); how many jobs need to be run in parrallel; only applicable when running parallel
 use_filter: false   #(bool); only use the instances that match the filter
-open_results: true #(bool); calculate the results of the runs and open after running
+open_results: false #(bool); calculate the results of the runs and open after running
 
 filter:
   author: 'cat'
@@ -23,7 +23,7 @@ params:
   # General: run info
   #
 
-  - run_type: GENERAL          #name of the run , configured with the paramaters below
+  - run_type: SA-Z          #name of the run , configured with the paramaters below
     run: 0                    #(0); indicates which run it is
     root_folder: ''           #(empty); indicates the folder of the author, containing the problem and aux file.
     instance: ''              #(empty); indicates the instance being used
@@ -87,16 +87,13 @@ params:
     # Objective: Tool Hops
     #
 
-    ##TODO
-
 
     #
     # Simulated Annealing
     #
 
-
-    start_temp: 100                 #double; start temperature
-    end_temp:  0.0097               #double; end temperature
+    start_temp: 30                 #double; start temperature
+    end_temp:  0.003               #double; end temperature
     sa_timed: false                 #double;
     decay_rate: -1                  #(double,-1: auto generate); the decay rate,
     force_iterations: false         #(bool); use hardcoded iterations function;
@@ -112,7 +109,7 @@ params:
     # Logging
 
     log: true                      #(bool); write logs in general
-    log_verbose: true              #(bool); write logs to stdout
+    log_verbose: false              #(bool); write logs to stdout
     write_results: false            #(bool); write results to file
     live_result: false             #(bool); transmit live results
 
@@ -120,10 +117,15 @@ params:
 
 
 
+  - run_type: SA-A
+    start_temp: 100                 #double; start temperature
+    end_temp:  0                    #double; end temperature
+
+
 
   - run_type: SA-B
     start_temp: 100                 #double; start temperature
-    end_temp:  0                    #double; end temperature
+    end_temp:  0.09                    #double; end temperature
 
   - run_type: SA-C
     start_temp: 100                 #double; start temperature
@@ -131,32 +133,72 @@ params:
 
 
   - run_type: SA-D
-    start_temp: 10                 #double; start temperature
+    start_temp: 100                 #double; start temperature
     end_temp:  0.0009               #double; end temperature
 
   - run_type: SA-E
     start_temp: 70                 #double; start temperature
-    end_temp:  0.003               #double; end temperature
+    end_temp:  0.7               #double; end temperature
 
 
   - run_type: SA-F
-      start_temp: 70                 #double; start temperature
-      end_temp:  0.003               #double; end temperature
+    start_temp: 70                 #double; start temperature
+    end_temp:  0.07               #double; end temperature
 
 
   - run_type: SA-G
-      start_temp: 70                 #double; start temperature
-      end_temp:  0.003               #double; end temperature
+    start_temp: 70                 #double; start temperature
+    end_temp:  0.007               #double; end temperature
 
 
   - run_type: SA-H
-      start_temp: 70                 #double; start temperature
-      end_temp:  0.003               #double; end temperature
+    start_temp: 70                 #double; start temperature
+    end_temp:  0.0007               #double; end temperature
 
 
-  - run_type: SA-E
-      start_temp: 70                 #double; start temperature
-      end_temp:  0.003               #double; end temperature
+  - run_type: SA-I
+    start_temp: 50                 #double; start temperature
+    end_temp:  0.5               #double; end temperature
+
+
+  - run_type: SA-J
+    start_temp: 50                 #double; start temperature
+    end_temp:  0.05               #double; end temperature
+
+
+
+
+  - run_type: SA-K
+    start_temp: 50                 #double; start temperature
+    end_temp:  0.005               #double; end temperature
+
+
+
+  - run_type: SA-L
+    start_temp: 50                 #double; start temperature
+    end_temp:  0.0008               #double; end temperature
+
+
+
+  - run_type: SA-M
+    start_temp: 10                 #double; start temperature
+    end_temp:  0.1               #double; end temperature
+
+
+
+  - run_type: SA-N
+    start_temp: 10                 #double; start temperature
+    end_temp:  0.01              #double; end temperature
+
+
+  - run_type: SA-O
+    start_temp: 10                 #double; start temperature
+    end_temp:  0.001               #double; end temperature
+
+
+  - run_type: SA-P
+    start_temp: 10                 #double; start temperature
+    end_temp:  0.0001               #double; end temperature
 
 
 
