--- a/data/config/result_config.yaml
+++ b/data/config/result_config.yaml
@@ -3,7 +3,7 @@ files: 'mixed_files.json' #filename of file containing instances to be run
 bundle_variations: false
 bundle_runs: false
 use_run_type: false
-run_type: [ORDERED-SD,RANDOM-SD]  #(str, true)
+run_type: [SA-Z]  #(str, true)
 use_filter: false
 title: ''
 filter:
