--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
 # Compiled class file
 *.class
 venv
+
+#ignore instance results
+data/instances/catanzaro
+data/instances/crama
+data/instances/mecler
+data/instances/yanasse
 data/instances_archive
+data/instances_remote
+data/instances_local
+data/collection
+data/waiting
+data/instances_temp
 .gradle
+/data/instances_local/
